==> apache/nuttx/arch/xtensa/src/esp32s3/esp32s3_spi.c <==
#include <nuttx/config.h>
#include <assert.h>
#include <debug.h>
#include <sys/types.h>
#include <inttypes.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <time.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/clock.h>
#include <nuttx/mutex.h>
#include <nuttx/semaphore.h>
#include <nuttx/spi/spi.h>
#include <arch/board/board.h>
#include "esp32s3_spi.h"
#include "esp32s3_irq.h"
#include "esp32s3_gpio.h"
#include "esp32s3_dma.h"
#include "xtensa.h"
#include "hardware/esp32s3_gpio_sigmap.h"
#include "hardware/esp32s3_pinmap.h"
#include "hardware/esp32s3_spi.h"
#include "hardware/esp32s3_soc.h"
#include "hardware/esp32s3_system.h"
#  define SPI_HAVE_SWCS 1
#  define SPI_HAVE_SWCS 0
#define SPI_DMA_DESC_NUM    (CONFIG_ESP32S3_SPI2_DMADESC_NUM)
#define SPI_DMA_RESET_MASK  (SPI_DMA_AFIFO_RST_M | SPI_RX_AFIFO_RST_M)
#define SPI_DEFAULT_FREQ  (400000)
#define SPI_DEFAULT_WIDTH (8)
#define SPI_DEFAULT_MODE  (SPIDEV_MODE0)
#define VALUE_MASK(_val, _field) (((_val) & (_field##_V)) << (_field##_S))
#define SPI_MAX_BUF_SIZE (64)
#  define MIN(a, b) (((a) < (b)) ? (a) : (b))

static int esp32s3_spi_lock(struct spi_dev_s *dev, bool lock)
{
  int ret;
  struct esp32s3_spi_priv_s *priv = (struct esp32s3_spi_priv_s *)dev;

  if (lock)
    {
      ret = nxmutex_lock(&priv->lock);
    }
  else
    {
      ret = nxmutex_unlock(&priv->lock);
    }

  return ret;
}

static uint32_t esp32s3_spi_setfrequency(struct spi_dev_s *dev,
                                         uint32_t frequency)
{
  uint32_t reg_val;
  struct esp32s3_spi_priv_s *priv = (struct esp32s3_spi_priv_s *)dev;
  const uint32_t duty_cycle = 128;

  if (priv->frequency == frequency)
    {
      /* Requested frequency is the same as the current frequency. */

      return priv->actual;
    }

  /* In HW, n, h and l fields range from 1 to 64, pre ranges from 1 to 8K.
   * The value written to register is one lower than the used value.
   */

  if (frequency > ((APB_CLK_FREQ / 4) * 3))
    {
      /* Using APB frequency directly will give us the best result here. */

      reg_val = SPI_CLK_EQU_SYSCLK_M;
      priv->actual = APB_CLK_FREQ;
    }
  else
    {
      /* For best duty cycle resolution, we want n to be as close to 32 as
       * possible, but we also need a pre/n combo that gets us as close as
       * possible to the intended frequency. To do this, we bruteforce n and
       * calculate the best pre to go along with that. If there's a choice
       * between pre/n combos that give the same result, use the one with the
       * higher n.
       */

      int32_t pre;
      int32_t n;
      int32_t h;
      int32_t l;
      int32_t bestn = -1;
      int32_t bestpre = -1;
      int32_t besterr = 0;
      int32_t errval;

      /* Start at n = 2. We need to be able to set h/l so we have at least
       * one high and one low pulse.
       */

      for (n = 2; n <= 64; n++)
        {
          /* Effectively, this does:
           *   pre = round((APB_CLK_FREQ / n) / frequency)
           */

          pre = ((APB_CLK_FREQ / n) + (frequency / 2)) / frequency;

          if (pre <= 0)
            {
              pre = 1;
            }

          if (pre > 16)
            {
              pre = 16;
            }

          errval = abs(APB_CLK_FREQ / (pre * n) - frequency);
          if (bestn == -1 || errval <= besterr)
            {
              besterr = errval;
              bestn = n;
              bestpre = pre;
            }
        }

      n = bestn;
      pre = bestpre;
      l = n;

      /* Effectively, this does:
       *   h = round((duty_cycle * n) / 256)
       */

      h = (duty_cycle * n + 127) / 256;
      if (h <= 0)
        {
          h = 1;
        }

      reg_val = ((l - 1) << SPI_CLKCNT_L_S) |
                ((h - 1) << SPI_CLKCNT_H_S) |
                ((n - 1) << SPI_CLKCNT_N_S) |
                ((pre - 1) << SPI_CLKDIV_PRE_S);

      priv->actual = APB_CLK_FREQ / (n * pre);
    }

  priv->frequency = frequency;

  putreg32(reg_val, SPI_CLOCK_REG(priv->config->id));

  spiinfo("frequency=%" PRIu32 ", actual=%" PRIu32 "\n",
          priv->frequency, priv->actual);

  return priv->actual;
}

static void esp32s3_spi_setmode(struct spi_dev_s *dev,
                                enum spi_mode_e mode)
{
  struct esp32s3_spi_priv_s *priv = (struct esp32s3_spi_priv_s *)dev;

  spiinfo("mode=%d\n", mode);

  /* Has the mode changed? */

  if (mode != priv->mode)
    {
      uint32_t ck_idle_edge;
      uint32_t ck_out_edge;

      switch (mode)
        {
          case SPIDEV_MODE0: /* CPOL=0; CPHA=0 */
            ck_idle_edge = 0;
            ck_out_edge = 0;
            break;

          case SPIDEV_MODE1: /* CPOL=0; CPHA=1 */
            ck_idle_edge = 0;
            ck_out_edge = 1;
            break;

          case SPIDEV_MODE2: /* CPOL=1; CPHA=0 */
            ck_idle_edge = 1;
            ck_out_edge = 1;
            break;

          case SPIDEV_MODE3: /* CPOL=1; CPHA=1 */
            ck_idle_edge = 1;
            ck_out_edge = 0;
            break;

          default:
            spierr("Invalid mode: %d\n", mode);
            DEBUGPANIC();
            return;
        }

      esp32s3_spi_clr_regbits(SPI_MISC_REG(priv->config->id),
                              SPI_CK_IDLE_EDGE_M);
      esp32s3_spi_set_regbits(SPI_MISC_REG(priv->config->id),
                              VALUE_MASK(ck_idle_edge, SPI_CK_IDLE_EDGE));

      esp32s3_spi_clr_regbits(SPI_USER_REG(priv->config->id),
                              SPI_CK_OUT_EDGE_M);
      esp32s3_spi_set_regbits(SPI_USER_REG(priv->config->id),
                              VALUE_MASK(ck_out_edge, SPI_CK_OUT_EDGE));

      priv->mode = mode;
    }
}

static uint32_t esp32s3_spi_send(struct spi_dev_s *dev, uint32_t wd)
{
  struct esp32s3_spi_priv_s *priv = (struct esp32s3_spi_priv_s *)dev;

  return esp32s3_spi_poll_send(priv, wd);
}

static void esp32s3_spi_exchange(struct spi_dev_s *dev,
                                 const void *txbuffer,
                                 void *rxbuffer,
                                 size_t nwords)
{
  struct esp32s3_spi_priv_s *priv = (struct esp32s3_spi_priv_s *)dev;

#ifdef CONFIG_ESP32S3_SPI2_DMA
  size_t thld = CONFIG_ESP32S3_SPI2_DMATHRESHOLD;

  if (nwords > thld)
    {
      esp32s3_spi_dma_exchange(priv, txbuffer, rxbuffer, nwords);
    }
  else
#endif
    {
      esp32s3_spi_poll_exchange(priv, txbuffer, rxbuffer, nwords);
    }
}

static void esp32s3_spi_sndblock(struct spi_dev_s *dev,
                                 const void *txbuffer,
                                 size_t nwords)
{
  spiinfo("txbuffer=%p nwords=%d\n", txbuffer, nwords);

  esp32s3_spi_exchange(dev, txbuffer, NULL, nwords);
}

static void esp32s3_spi_recvblock(struct spi_dev_s *dev,
                                  void *rxbuffer,
                                  size_t nwords)
{
  spiinfo("rxbuffer=%p nwords=%d\n", rxbuffer, nwords);

  esp32s3_spi_exchange(dev, NULL, rxbuffer, nwords);
}

static void esp32s3_spi_init(struct spi_dev_s *dev)
{
  struct esp32s3_spi_priv_s *priv = (struct esp32s3_spi_priv_s *)dev;
  const struct esp32s3_spi_config_s *config = priv->config;
  uint32_t regval;

  esp32s3_gpiowrite(config->cs_pin, true);
  esp32s3_gpiowrite(config->mosi_pin, true);
  esp32s3_gpiowrite(config->miso_pin, true);
  esp32s3_gpiowrite(config->clk_pin, true);

#if SPI_HAVE_SWCS
  esp32s3_configgpio(config->cs_pin, OUTPUT_FUNCTION_1);
  esp32s3_gpio_matrix_out(config->cs_pin, SIG_GPIO_OUT_IDX, 0, 0);
#endif

  /* SPI3 doesn't have IOMUX, if SPI3 is enabled use GPIO Matrix for both */

  if (esp32s3_spi_iomux(priv))
    {
#if !SPI_HAVE_SWCS
      esp32s3_configgpio(config->cs_pin, OUTPUT_FUNCTION_5);
      esp32s3_gpio_matrix_out(config->cs_pin, SIG_GPIO_OUT_IDX, 0, 0);
#endif
      esp32s3_configgpio(config->mosi_pin, OUTPUT_FUNCTION_5);
      esp32s3_gpio_matrix_out(config->mosi_pin, SIG_GPIO_OUT_IDX, 0, 0);

      esp32s3_configgpio(config->miso_pin, INPUT_FUNCTION_5 | PULLUP);
      esp32s3_gpio_matrix_out(config->miso_pin, SIG_GPIO_OUT_IDX, 0, 0);

      esp32s3_configgpio(config->clk_pin, OUTPUT_FUNCTION_5);
      esp32s3_gpio_matrix_out(config->clk_pin, SIG_GPIO_OUT_IDX, 0, 0);
    }
  else
    {
#if !SPI_HAVE_SWCS
      esp32s3_configgpio(config->cs_pin, OUTPUT);
      esp32s3_gpio_matrix_out(config->cs_pin, config->cs_outsig, 0, 0);
#endif
      esp32s3_configgpio(config->mosi_pin, OUTPUT);
      esp32s3_gpio_matrix_out(config->mosi_pin, config->mosi_outsig, 0, 0);

      esp32s3_configgpio(config->miso_pin, INPUT | PULLUP);
      esp32s3_gpio_matrix_in(config->miso_pin, config->miso_insig, 0);

      esp32s3_configgpio(config->clk_pin, OUTPUT);
      esp32s3_gpio_matrix_out(config->clk_pin, config->clk_outsig, 0, 0);
    }

  modifyreg32(SYSTEM_PERIP_CLK_EN0_REG, 0, config->clk_bit);
  modifyreg32(SYSTEM_PERIP_RST_EN0_REG, config->rst_bit, 0);

  regval = SPI_DOUTDIN_M | SPI_USR_MISO_M | SPI_USR_MOSI_M | SPI_CS_HOLD_M;
  putreg32(regval, SPI_USER_REG(priv->config->id));
  putreg32(0, SPI_USER1_REG(priv->config->id));
  putreg32(0, SPI_SLAVE_REG(priv->config->id));
  putreg32(SPI_CS1_DIS_M | SPI_CS2_DIS_M,
           SPI_MISC_REG(priv->config->id));

  regval = SPI_CLK_EN_M | SPI_MST_CLK_ACTIVE_M | SPI_MST_CLK_SEL_M;
  putreg32(regval, SPI_CLK_GATE_REG(priv->config->id));

#if SPI_HAVE_SWCS
  esp32s3_spi_set_regbits(SPI_MISC_REG(priv->config->id), SPI_CS0_DIS_M);
#endif

  putreg32(0, SPI_CTRL_REG(priv->config->id));
  putreg32(VALUE_MASK(0, SPI_CS_HOLD_TIME),
           SPI_USER1_REG(priv->config->id));

#ifdef CONFIG_ESP32S3_SPI2_DMA
  esp32s3_spi_dma_init(dev);
#endif

  esp32s3_spi_setfrequency(dev, config->clk_freq);
  esp32s3_spi_setbits(dev, config->width);
  esp32s3_spi_setmode(dev, config->mode);
}

static void esp32s3_spi_deinit(struct spi_dev_s *dev)
{
  struct esp32s3_spi_priv_s *priv = (struct esp32s3_spi_priv_s *)dev;

#ifdef CONFIG_ESP32S3_SPI2_DMA
  modifyreg32(SYSTEM_PERIP_CLK_EN0_REG, priv->config->dma_clk_bit, 0);
#endif

  modifyreg32(SYSTEM_PERIP_RST_EN0_REG, 0, priv->config->clk_bit);
  modifyreg32(SYSTEM_PERIP_CLK_EN0_REG, priv->config->clk_bit, 0);

  priv->frequency = 0;
  priv->actual    = 0;
  priv->mode      = SPIDEV_MODE0;
  priv->nbits     = 0;
}

struct spi_dev_s *esp32s3_spibus_initialize(int port)
{
  struct spi_dev_s *spi_dev;
  struct esp32s3_spi_priv_s *priv;

  switch (port)
    {
#ifdef CONFIG_ESP32S3_SPI2
      case ESP32S3_SPI2:
        priv = &esp32s3_spi2_priv;
        break;
#endif
#ifdef CONFIG_ESP32S3_SPI3
      case ESP32S3_SPI3:
        priv = &esp32s3_spi3_priv;
        break;
#endif
      default:
        return NULL;
    }

  spi_dev = (struct spi_dev_s *)priv;

  nxmutex_lock(&priv->lock);
  if (priv->refs != 0)
    {
      priv->refs++;
      nxmutex_unlock(&priv->lock);
      return spi_dev;
    }

#ifdef CONFIG_ESP32S3_SPI2_DMA
  /* If a CPU Interrupt was previously allocated, then deallocate it */

  if (priv->cpuint != -ENOMEM)
    {
      /* Disable the provided CPU Interrupt to configure it. */

      up_disable_irq(priv->config->irq);
      esp32s3_teardown_irq(priv->cpu, priv->config->periph, priv->cpuint);
      irq_detach(priv->config->irq);

      priv->cpuint = -ENOMEM;
      priv->cpu = -ENODEV;
    }

  /* Set up to receive peripheral interrupts on the current CPU */

  priv->cpu = up_cpu_index();
  priv->cpuint = esp32s3_setup_irq(priv->cpu, priv->config->periph,
                                   ESP32S3_INT_PRIO_DEF,
                                   ESP32S3_CPUINT_LEVEL);
  if (priv->cpuint < 0)
    {
      /* Failed to allocate a CPU interrupt of this type. */

      nxmutex_unlock(&priv->lock);
      return NULL;
    }

  /* Attach and enable the IRQ */

  if (irq_attach(priv->config->irq, esp32s3_spi_interrupt, priv) != OK)
    {
      /* Failed to attach IRQ, so CPU interrupt must be freed. */

      esp32s3_teardown_irq(priv->cpu, priv->config->periph, priv->cpuint);
      priv->cpuint = -ENOMEM;
      nxmutex_unlock(&priv->lock);

      return NULL;
    }

  /* Enable the CPU interrupt that is linked to the SPI device. */

  up_enable_irq(priv->config->irq);
#endif

  esp32s3_spi_init(spi_dev);
  priv->refs++;

  nxmutex_unlock(&priv->lock);
  return spi_dev;
}
